# MC-map-drawing-ETO

./: BlockList.json  Delta-E-CIE-2000.py  README.md  SuperflatEdit.py  SuperflatEdit.spec  colorList.txt  color备份.py  useful.py  高度计算.py
C++/Cblk/: CMakeLists.txt  main.cpp
C++/Cimg/: CMakeLists.txt  main.cpp
C++/Cmap/: CMakeLists.txt  main.cpp
C++/Cmap/allhpp/: CIEDE2000.hpp  RGB_to_XYZ.hpp
C++/Cnew/: CMakeLists.txt  main(idcounts).cpp  main(map).cpp  main.cpp  nbt.hpp
C++/Cset/: CMakeLists.txt  main.cpp
Cblk/: main.cpp
Cimg/: main.cpp
Cmap/: KDTree.cpp  main.cpp
Cmap/allhpp/: XYZ_to_Lab.hpp
Cnew/: main(idcounts).cpp  main(map).cpp  main.cpp  pivixColor.txt
Cset/: main.cpp
Python/SuperflatEdit/: SuperflatEdit.py  SuperflatEdit.spec
UI/: Aui.py  Aui.ui  Bui.py  Bui.ui  Cui.py  Dui.py  Dui.ui  Eui.py  Eui.ui  Fui.py  Fui.ui  Hui.py  Kui.py  Kui.ui  Mui.py  Nui.py  Pui.py  Tui.py  Xui.py  Zui.py  Zui.ui  _script-ETO_.py  buttonTest.py  config.json  main.py  test.py
UI/UI文件(仅供参考)/: Cui.ui  Hui.ui  Kui.ui  Tui.ui
UI/byETO/: Aui.py  Bui.py  Cui.py  Dui.py  Eui.py  Fui.py  Hui.py  Kui.py  Mui.py  Nui.py  Tui.py  Xui.py  Zui.py
UI/byETO/settings/: Yui.py  config.py  demo.py  setting_interface.py
UI/byETO/settings/config/: config.json
UI/data/: BlockList.json  colorList.txt
UI/loading/: abc.html  new.html  qwe.html
UI/saves/121/: level.dat_old
UI/saves/121/advancements/: 00000000-0000-3003-998f-501bcc513c55.json
UI/saves/121/entities/: r.-1.-1.mca  r.-1.0.mca  r.-7.-1.mca  r.-7.0.mca  r.0.-1.mca  r.0.0.mca  r.5.0.mca  r.5.5.mca  r.6.-1.mca  r.6.0.mca
UI/saves/121/playerdata/: 00000000-0000-3003-998f-501bcc513c55.dat_old
UI/saves/121/region/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.0.mca  r.-2.1.mca  r.0.-2.mca  r.0.0.mca  r.0.1.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca  r.1.1.mca
UI/saves/121/stats/: 00000000-0000-3003-998f-501bcc513c55.json
UI/saves/121n/: level.dat_old
UI/saves/121n/advancements/: 00000000-0000-3003-998f-501bcc513c55.json
UI/saves/121n/entities/: r.-1.-1.mca  r.-1.-5.mca  r.-1.-6.mca  r.-1.0.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.-2.mca  r.-2.-3.mca  r.-2.-4.mca  r.-2.-5.mca  r.-2.-6.mca  r.-2.0.mca  r.-2.1.mca  r.-2.4.mca  r.-2.6.mca  r.-2.8.mca  r.-3.-1.mca  r.-3.-2.mca  r.-3.-4.mca  (+13 more)
UI/settings/: config.py  demo.py  setting_interface.py
UI/settings/config/: config.json
src/: BlockList.json  tips.txt  命令.txt
temp/: SuperflatEdit-old.py  color-old.py  色域图.py  高度计算.py  高度计算测试.py
(+55 files in other folders)
